--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(food_ordering C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(food_ordering main.c)
+add_executable(food_ordering main.c display.h display.c choice.h choice.c accountData.h accountData.c)
